fix(29368): replace Stream.toList() with collect(Collectors.toList()) for Java 8 compat in cucumber stepdef